Lovable branding fixed

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="WeInn - Professional Property Management Platform" />
     <meta property="og:description" content="List your hotels and villas with WeInn. Professional property management made simple for property owners." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/weinn-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@weinn" />
+    <meta name="twitter:image" content="/weinn-logo.png" />
   </head>
 
   <body>
